# cottage-backend

./: pyproject.toml
src/cottage_backend/: __init__.py  base.py  exceptions.py  factory.py  models.py
src/cottage_backend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cottage_backend/backends/: llamacpp_backend.py  ollama_backend.py
