[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cottage-backend"
version = "0.1.0"
description = "Backend abstraction layer for CottageAI (Ollama, llama.cpp, etc.)"
authors = [
    { name = "Karen Fisher" }
]
requires-python = ">=3.10"

dependencies = [
    "requests>=2.31.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
